versioned_docs/version-2.0.0/development/services/processing/configuration/processing-static-configuration.md
---
id: backend-processing-static-configuration
title: Processing static configuration
sidebar_label: Static configuration
slug: /development/backend/services/processing/configuration/static-configuration
---

Static configuration is the microservice configuration set before microservice startup in a property file.
This configuration is common to all tenant.

Static configuration for `Processing` service are :

| Name                                                | Type    | Default Value | Description                                                                                                                                                                                                                                                                                                                                                                                                                       |
|-----------------------------------------------------|---------|---------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| regards.processing.sharedStorage.basePath           | string  |               | Path to a shared storage for processes which need it to store output files.<br/>A process may be programmed to create output files anywhere accessible by an URL, but the Processing service provides as a convenience a shared storage accessible to all REGARDS modules needing to access output files, as a mount point in the file system. This way, output files can be passed as file protocol URLs                         |
| regards.processing.executionWorkdir.basePath        | string  |               | Path to a file system directory where a folder is created for each execution.<br/> For processes which may use them, as a convenience, the Processing service provides utilities to create execution work directories. These execution workdirs are created as file system children of this parameter's value                                                                                                                     |
| regards.processing.cleanup.batch.age.ms             | long    | 604800000     | Minimum for old terminated batches selected for suppression.<br/>Old batches, for which all executions are in a final state, are regularly cleaned up. This property say how much time after the last execution's last update a batch is considered too old and is selected for deletion.                                                                                                                                         |
| regards.processing.cleanup.batch.rate.ms            | long    | 3600000       | How often we look for old batches to delete them.                                                                                                                                                                                                                                                                                                                                                                                 |
| regards.processing.r2dbc.host                       | string  |               | Host to connect to the database.                                                                                                                                                                                                                                                                                                                                                                                                  |
| regards.processing.r2dbc.port                       | integer |               | Port to connect to the database.                                                                                                                                                                                                                                                                                                                                                                                                  |
| regards.processing.r2dbc.username                   | string  |               | Username to connect to the database.                                                                                                                                                                                                                                                                                                                                                                                              |
| regards.processing.r2dbc.password                   | string  |               | Password to connect to the database.                                                                                                                                                                                                                                                                                                                                                                                              |
| regards.processing.r2dbc.dbname                     | string  |               | Name of the database to connect to.                                                                                                                                                                                                                                                                                                                                                                                               |
| regards.processing.r2dbc.schema                     | string  | null          | Schema of the database to connect to.                                                                                                                                                                                                                                                                                                                                                                                             |
| regards.processing.r2dbc.pool.size.min              | integer | 1             | Minimum pool size of the database to connect to.                                                                                                                                                                                                                                                                                                                                                                                  |
| regards.processing.r2dbc.pool.size.max              | integer | 2             | Maximum pool size of the database to connect to.                                                                                                                                                                                                                                                                                                                                                                                  |
| regards.processing.outputfiles.cleanup.cron         | string  | 0 0 */2 * * * | Output files saved in the storage are cleaned up regularly. This cron expression defines how often. Default value is every two hours.                                                                                                                                                                                                                                                                                             |
| regards.processing.executions.timedout.cleanup.cron | string  | 0 0 */6 * * * | When an execution is created, we use the duration forecast of its parent process to determine an expected runtime duration. This time is multiplied by two and saved in base. At every trigger of this cron expression, we look for executions that are still running after this saved duration, and declare them as timed out. This puts them in a final state and notifies the user of the time out. Users may choose to retry. |

Some other properties can be updated, please check 
[Processing section in the install guide](/docs/setup/swarm/advanced/optimizations#processing-optimization).

:::info
Some of these properties are customizable in ansible inventory. 
[see installation guide](http://localhost:3000/docs/next/setup/swarm/advanced/optimizations)

To make missing properties customizable, you have to update regards ansible playbook : the regards-mconfig role.